# pyproject.toml

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "seaML"
dynamic = ["version"]
authors = [
    {name = "Shamith Achanta", email = "achantashamith007@gmail.com"},
]
description = "Interpretable ML: simplified library, based on MLX, for getting insights into neural networks"
keywords = ["interpretability", "neural networks", "mlx"]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS"
]
requires-python = ">= 3.10"
dependencies = [
    "pip",
    "tzdata",
    "wheel",
    "pytest",
    "mlx",
    "numpy<2.0.0",
    "torch"
]

[tool.hatch.version]
path = "src/seaML/__init__.py"

[project.urls]
repository = ""
