# pyproject.toml

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "simpleGrad"
dynamic = ["version"]
authors = [
    {name = "Shamith Achanta", email = "achantashamith007@gmail.com"},
]
description = "simpleGrad: simplified library, based on NumPy-like libraries, for getting insights into neural networks"
keywords = ["interpretability", "neural networks", "mlx", "numpy"]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS"
]
requires-python = ">= 3.10"
dependencies = [
    "pip",
    "tzdata",
    "wheel",
    "cmake",
    "pytest",
    "mlx",
    "numpy",
    "torch",
    "jaxtyping",
    "typeguard",
    "graphviz"
]

[tool.hatch.version]
path = "src/seaDL/__init__.py"

[project.urls]
repository = ""
